--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,18 @@ certifi==2018.11.29
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.1.7
+django-appconf==1.0.3
+django-compressor==2.2
 django-heroku==0.3.1
+django-libsass==0.7
 gunicorn==19.9.0
 idna==2.8
+libsass==0.18.0
 psycopg2==2.7.7
 pytz==2018.9
+rcssmin==1.0.6
 requests==2.21.0
+rjsmin==1.0.12
+six==1.12.0
 urllib3==1.24.1
 whitenoise==4.1.2
