--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ django-libsass==0.7
 gunicorn==19.9.0
 idna==2.8
 libsass==0.18.0
+Pillow==6.0.0
 psycopg2==2.7.7
+psycopg2-binary==2.8.2
 pytz==2018.9
 rcssmin==1.0.6
 requests==2.21.0
