--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,28 @@
+arrow==0.14.2
+blessed==1.15.0
 certifi==2018.11.29
 chardet==3.0.4
 dj-database-url==0.5.0
-Django==2.1.7
+Django==2.2.2
 django-appconf==1.0.3
 django-compressor==2.2
 django-heroku==0.3.1
 django-libsass==0.7
+django-picklefield==2.0
+django-q==1.0.1
 gunicorn==19.9.0
 idna==2.8
 libsass==0.18.0
 Pillow==6.0.0
 psycopg2==2.7.7
 psycopg2-binary==2.8.2
+python-dateutil==2.8.0
 pytz==2018.9
 rcssmin==1.0.6
-requests==2.21.0
+requests==2.22.0
 rjsmin==1.0.12
 six==1.12.0
-urllib3==1.24.2
+sqlparse==0.3.0
+urllib3==1.25.3
+wcwidth==0.1.7
 whitenoise==4.1.2
